# dehaze-rag-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_dashscope_api.py  test_pdf_loader.py
eval/: eval_questions.json  evaluate_retrieval.py
papers/: README.md
src/dehaze_rag/: app.py  build_index.py  config.py  embedding_model.py  knowledge_base.py  llm_client.py  paper_agent.py  pdf_loader.py  prompt_templates.py  query_engine.py  report_exporter.py  text_splitter.py  vector_store.py
